fixed desktop spacing between menu and login button

--- a/src/Sass/components/app.scss
+++ b/src/Sass/components/app.scss
@@ -15,5 +15,5 @@
 
 
 .App,main,section,footer{
-  width: 100%;
+  max-width: 1140px;
 }
