--- a/src/Sass/components/header.scss
+++ b/src/Sass/components/header.scss
@@ -3,7 +3,6 @@ header{
     // background:$secondary;
     width:100%;
     top:0;
-    display:flex;
     padding: 0.8em;
     font-weight: 700;
     
