--- a/src/Sass/components/signupbtn.scss
+++ b/src/Sass/components/signupbtn.scss
@@ -6,5 +6,5 @@
     background-color: $primary;
     font-size: 1rem;
     padding:0.5rem;
-    width:300px;
+  
 }
